[package]
name = "ngtq_unix_bus_service"
version = "0.1.0"
edition = "2021"

[dependencies]
ngtask_queue_basic = "0.1.0"
ngtq = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
bus_service_models = { path = "../bus_service_models" }